--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.cursosdedesarrollo.myapplication" >
 
     <application
-        android:name="com.cursosdedesarrollo.myapplication.Aplicacion"
+        android:name="com.cursosdedesarrollo.myapplication.beans.Aplicacion"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
